--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10"
 requests = "^2.32.3"
 psycopg2 = "^2.9.10"
 gunicorn = "^23.0.0"
+Django = "^4.2"
+djangorestframework = "^3.16.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
